<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"

        >

        <ImageButton
            android:id="@+id/btnBackSpaceMostrarEquipos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_keyboard_backspace_white_24dp"
            android:layout_gravity="left"
            android:clickable="true"
            />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="10dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#f1f1f1">
        <TextView
            android:textAlignment="center"
            android:text="Información del equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#212121"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/txtNombreEquipo"
            android:text="Nombre:"
            android:textSize="15sp"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtNombreEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView"
            android:textSize="15sp"
            android:textColor="#757575"
            android:enabled="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Encargado:"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtEncargado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#757575"
            android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Promedio de edad"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtPromedioEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#757575"
            android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Localización"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtLocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#757575"
            android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contacto"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#757575"
            android:enabled="false"
            />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp">

            <Button
                android:id="@+id/btnRetar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redondoretar"
                android:text="Retar"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btnUnirse"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:background="@drawable/redondounirse"
                android:text="Unirse" />

        </RelativeLayout>
        </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Miembros del equipo"
                android:textAlignment="center"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ListView
                android:id="@+id/listaJugadores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scrollbars="none"
                />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>