<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context="com.proyecto.udata.retico.Login"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#e6e6e6"
        android:elevation="6dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"


                android:src="@drawable/logoretico"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">


            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#212121"
                android:hint="Correo electrónico"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/txtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:backgroundTint="#212121"
                android:hint="Contraseña"
                />


            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:background="#757575"
                android:alpha="0.7"
                android:textAlignment="center"
                android:text="Ingresar"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/textoCambiarDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"

                android:textAlignment="center"
                android:textColor="#757575"
                android:textSize="12dp"
                android:clickable="true"
                android:textColorLink="#F6006F"
                android:text="¿Aún no tienes una cuenta?"
                />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Registrarme"
                android:background="#F44336"
                android:textColor="@android:color/white"
                android:alpha="0.8"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
