<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"

        >

        <ImageButton
            android:id="@+id/btnBackSpaceListaEquipos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_keyboard_backspace_white_24dp"
            android:layout_gravity="left"
            android:clickable="true"
            />
<!--
        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_search_white_24dp"
            android:layout_gravity="right"
            android:clickable="true"
            />
-->

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textAlignment="center"
            android:text="Lista de Equipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:textSize="25sp"/>

        <FrameLayout
            android:id="@+id/fragment_Content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ListView
            android:id="@+id/listaEquipos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundTint="#757575"/>


            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_add_white_24dp"
                android:elevation="4dp"
                app:fabSize="normal"
                app:borderWidth="0dp"
                android:clickable="true"
                android:id="@+id/btnFAB"
                />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
