...
            android:background="@color/colorPrimary"
            android:elevation="8dp"

            >

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_dehaze_white_24dp"
                android:layout_gravity="left"
                android:clickable="true"
                android:onClick="onClick"
...
                    android:layout_height="wrap_content"
                    android:text="Mi perfil"

                    />

                <Button
                    android:id="@+id/btnListarEquipos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lista de Equipos"
                    />

                <Button
...
